# urandom-kiss

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  rustfmt.toml
.github/workflows/: rust.yml
examples/: detect_rng.rs  simple_fill.rs
scripts/: ci-check.sh
src/: error.rs  lib.rs
src/detect_rng/: mod.rs
src/urandom_core/: error.rs  mod.rs
