[package]
name = "kiss-entropy"
version = "0.1.1"
edition = "2024"

description = "A zero-dependency Rust wrapper for Linux and macOS /dev/urandom, exposing raw entropy reads, FIPS mode detection, and kernel RNG environment queries."
license = "LICENSE-MIT"
repository = "https://github.com/ptdecker/kiss-entropy"
homepage = "https://github.com/ptdecker/kiss-entropy"
documentation = "https://docs.rs/kiss-entropy"
readme = "README.md"
keywords = ["urandom", "rng", "no_std", "linux", "entropy"]
categories = ["os::unix-apis", "api-bindings", "no-std"]
authors = ["P. Todd Decker <ptdecker@mac.com>"]
rust-version = "1.85.0"

[features]
default = []

[lib]
name = "kiss_entropy"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true

[dependencies]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
strip = true

[profile.dev]
debug = true

[lints.clippy]
# Broad groups: warn, but with lower priority than specific lints
all      = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -2 }
nursery  = { level = "warn", priority = -2 }
cargo    = { level = "warn", priority = -2 }

# Specific lints: these override the groups
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
todo = "warn"
unimplemented = "warn"
